--- a/StarProject/Views/Home/AccessDenied.cshtml
+++ b/StarProject/Views/Home/AccessDenied.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] - 天文台管理系統</title>
+    <title>@ViewData["Title"] - 天文館管理系統</title>
 	<link href="~/css/access_denied.css" rel="stylesheet" />
 </head>
 <body>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="footer-info">
-        阿波羅天文館IT部門 © @DateTime.Now.Year | 系統維護：天文台技術部
+        阿波羅天文館IT部門 © @DateTime.Now.Year | 系統維護：天文館技術部
     </div>
 	<script src="~/js/access_denied.js"></script>
 </body>
