--- a/StarProject/Views/StarMaps/Create.cshtml
+++ b/StarProject/Views/StarMaps/Create.cshtml
@@ -31,6 +31,11 @@
             --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
             --bs-gradient: none;
         }
+
+        .card-header {
+            background-color: #2B4C8C;
+            color: #FFFFFF
+        }
     </style>
 </head>
 
