--- a/StarProject/Views/TicketStock/Index.cshtml
+++ b/StarProject/Views/TicketStock/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StarProject.Models.TicketStock>
+﻿@model IEnumerable<StarProject.ViewModels.TicketStockSumViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Stock)
+                @Html.DisplayNameFor(model => model.TicketNo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketNoNavigation)
+                @Html.DisplayNameFor(model => model.TotalStock)
             </th>
             <th></th>
         </tr>
@@ -31,15 +31,15 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Stock)
+                @Html.DisplayFor(modelItem => item.TicketNo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TicketNoNavigation.No)
+                @Html.DisplayFor(modelItem => item.TotalStock)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.No">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.No">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.No">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.TicketNo">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TicketNo">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TicketNo">Delete</a>
             </td>
         </tr>
 }
